--- a/Hackathon/styles.css
+++ b/Hackathon/styles.css
@@ -6,9 +6,10 @@
 	font-weight: 600;
 }
 .backgroundimg {
-	background-image: url("") ;
+	background-image: url(".jpg") ;
+	background-size: auto ;
 	background-repeat: no-repeat;
-	background-color: green;
+	background-color: cyan;
 }
 .imp { 
 	width: 300px; 
@@ -57,4 +58,7 @@ border: 10px solid white;
 	background-color: violet;
 background-image: url("") ;
 border: 10px solid white;
+}
+footer {
+	background-color: blue;
 }
