--- a/Hackathon/styles.css
+++ b/Hackathon/styles.css
@@ -17,6 +17,15 @@ h3 {
 a:hover {
 	text-decoration: none;
 }
+.top-left {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+}
+.navigation {
+  position: relative;
+  text-align: center;
+}
 .card {
 	border-radius: 10px;
 	border: 5px;
@@ -33,12 +42,6 @@ a:hover {
 .nav-link {
 	color: green;
 	font-weight: 600;
-}
-.backgroundimg {
-	background-image: url(".jpg") ;
-	background-size: auto ;
-	background-repeat: no-repeat;
-	background-color: cyan;
 }
 .imp { 
 	width: 300px; 
