--- a/Hackathon/styles.css
+++ b/Hackathon/styles.css
@@ -20,6 +20,9 @@ img {
 nav {
 	margin-top: 90px;
 }
+h6 {
+	color: white;
+}
 a.btn {
 	border: 5px solid white ;
 	border-radius: 10px;
@@ -28,6 +31,12 @@ a.btn {
 a.drop:hover {
 	transform: scale(1.2);
 	transition: .5s ease ;
+}
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .collapse {
 	margin : 10px;
