--- a/Hackathon/styles.css
+++ b/Hackathon/styles.css
@@ -2,6 +2,15 @@ html,body {
 	width: 100%;
 	overflow-x: hidden;
 }
+* {
+	font-family: 'Hind Siliguri', sans-serif;
+}
+a {
+	color: #0000b3;
+}
+a:hover {
+	color: #0000b3;
+}
 h1 {
 	text-align: center;
 	font-weight: 800;
@@ -10,9 +19,8 @@ h2 {
 	text-align: center;
 	font-weight: 600;
 }
-h3 {
-	text-align: center;
-	font-weight: 400;
+h1,h2,h3,h4 {
+	color: #33a395;
 }
 img {
 	border-radius: 10px;
